--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^16.18.126",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
